Resolved design awkwardness on smaller screens.

--- a/store/static/store/add_product.css
+++ b/store/static/store/add_product.css
@@ -11,7 +11,7 @@ label[for=id_store_id] {
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 800px) {
     .prod-form-card {
         background-color: #121212;
         position: absolute;
@@ -28,7 +28,7 @@ label[for=id_store_id] {
     }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 800px) {
     .prod-form-card {
         background-color: #121212;
         position: absolute;
